[*] 一些格式、名称等细节微调

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>智慧医疗-糖尿病检测系统</title>
+    <link rel="shortcut icon" type="image/x-icon" href="static/favicon.ico">
+    <title>智慧医疗-基于多模态数据的糖尿病诊疗系统</title>
   </head>
   <body>
     <div id="app"></div>
